# decord

./: CMakeLists.txt  README.md
.github/workflows/: ccpp.yml  pypi.yml
include/decord/runtime/: c_runtime_api.h
python/: README.md  pyproject.toml  setup.py
python/decord/: __init__.py
python/decord/_ffi/: libinfo.py
scripts/: ffmpeg-7.1.json
src/audio/: audio_reader.cc  audio_reader.h
src/runtime/: file_util.cc
src/video/: video_reader.cc
src/video/ffmpeg/: ffmpeg_common.h
src/video/nvcodec/: cuda_threaded_decoder.cc  cuda_threaded_decoder.h
tools/: build_macos_11.sh  build_macos_12_5.sh  build_manylinux2010.sh  update_version.py
