[build-system]
requires = ["setuptools", "wheel", "cmake>=3.20", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "decord"
dynamic = ["version"]
description = "An efficient video loader for deep learning with smart shuffling that seeks smartly"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
keywords = ["python", "video", "loader", "deep learning"]
dependencies = [
    "numpy>=1.26.4",
]
authors=[
    {name = "Lei Li", email = "leili.vision@outlook.com"},
    {name = "Weisu Yin", email = "inws@outlook.com"},
]
maintainers=[
    {name = "Lei Li", email = "leili.vision@outlook.com"},
    {name = "Weisu Yin", email = "inws@outlook.com"},
]

[tool.setuptools.dynamic]
version = {attr = "decord.__version__"}

[tool.cibuildwheel]
archs = "auto64"
build-verbosity = 1
skip = ""

before-all = ".github/workflows/before_all.sh"
before-build = ".github/workflows/before_build.sh"

manylinux-x86_64-image = "quay.io/pypa/manylinux_2_28_x86_64"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_28_aarch64"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.15"